Commit before pulling from Github pull request

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ $(function()
 				 'background-repeat': 'no-repeat'
 			 },
 			 openerClass: ''
-		},
-		ignoreClass: 'clickable'
+		}/*,
+		ignoreClass: 'clickable'*/
 	};
 
 	$('#sTree2, #sTree').sortableLists(options);
