Index.html update
Changelog link have been added.

--- a/index.html
+++ b/index.html
@@ -503,6 +503,10 @@ $('#toStrBtn').on('click', function() { console.log($('#sTree2').sortableListsTo
 		</p>
 		<p>Do not use more than one level css pattern to format li. Look at the <a href="#baseElement" id="toBaseElementAnch2">base element</a> description.</p>
 
+
+
+		<h2><a href="https://github.com/camohub/jquery-sortable-lists/CHANGELOG.md">Changelog is here</a></h2>
+
 	</section>
 
 	<section>
