Fixed automatic opening closed lists on every mouseover
If cursor pos is not over the insertZone value closed lists remain closed. Now closed lists open onlz if cursor pos is over the insertZone value.

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ $('#toStrBtn').on('click', function() { console.log($('#sTree2').sortableListsTo
 	</section>
 
 	<section>
-		<p>Sortable lists is under the GNU license.</p>
+		<p>Sortable lists is under the MIT license.</p>
 	</section>
 </div>
 
