New option insertZonePlus
It shows hintNode after/before li also if cursor position > insertZone. Till now it was allowed only if cursor pos. was < insertZone

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 $(function()
 {
 	var options = {
+        insertZonePlus: true,
 		placeholderCss: {'background-color': '#ff8'},
 		hintCss: {'background-color':'#bbf'},
 		isAllowed: function(cEl, hint, target)
