--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ $('#toStrBtn').on('click', function() { console.log($('#sTree2').sortableListsTo
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="pV20">
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="CFLW5DW6QDL4E">
-            <span>If this plugin is usefull for you, buy me a coffee &nbsp;</span>
+            <span>If this plugin is usefull for you, you can send me a gift. &nbsp;</span>
             <input type="image" class="pR t10" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
         </form>
