Little stylesheet fix 2.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ $(function()
 			<a href="https://github.com/camohub/jquery-sortable-lists/zipball/master" class="btn">Download as .zip</a>
 			<a href="https://github.com/camohub/jquery-sortable-lists/tarball/master" class="btn">Download as .tar.gz</a>
 			<a href="https://github.com/camohub/jquery-sortable-lists" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-			<br><b><span class="small1 c6">Or you can use: </span><span class="small1 c6">$&nbsp;bower&nbsp;install&nbsp;jquery-sortable-lists</span></b>
+			<br><b><span class="small1 c6">Or you can use: $&nbsp;bower&nbsp;install&nbsp;jquery-sortable-lists</span></b>
 		</section>
 	</div>
 </header>
