Opener documentation bug
Opener was css, class insted of openerCss, openerClass

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ $(function()
 		as: 'html',  // or "class" or skip if using background-image url
 		close: '&lt;i class="fa fa-minus red"&gt;&lt;/i&gt;', <span class="c4">// or 'fa fa-minus' or './imgs/Remove2.png'</span>
 		open: '&lt;i class="fa fa-plus"&gt;&lt;/i&gt;', <span class="c4">// or 'fa fa-plus' or './imgs/Add2.png'</span>
-		css: {
+		openerCss: {
 			'display': 'inline-block', <span class="c4">// Default value</span>
 			'float': 'left', <span class="c4">// Default value</span>
 			'width': '18px',
@@ -450,7 +450,7 @@ $(function()
 			'background-repeat': 'no-repeat' <span class="c4">// Default value</span>
 		},
 		<span class="c4">// or like a class. Note that class can not rewrite default values. To rewrite defaults you have to do it through css object.</span>
-		class: 'yourClassName'
+		openerClass: 'yourClassName'
 	}
 }</code>
 </pre>
