ADD Google Tag scripts has been added to gh-pages index.php

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WV6HKQ9');
+</script>
+<!-- End Google Tag Manager -->
+
 <meta charset='utf-8'>
 <meta name="description" content="jquery sortable lists plugin also for tree structures">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -109,6 +119,13 @@ $(function()
 </script>
 </head>
 <body>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+	<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WV6HKQ9" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <header>
 	<div class="container">
 		<h1>Jquery sortable lists</h1>
