FIX jquery-sortable-lists-mobile.js linked to index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 <script src="http://code.jquery.com/jquery-git1.min.js"></script>
-<script src="jquery-sortable-lists.js"></script>
+<script src="jquery-sortable-lists-mobile.js"></script>
 <script type="text/javascript">
 $(function()
 {
