--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@ $(function()
 				For better understanding look at the <a href="#picture" id="toPictureAnch">picture</a> which describes all active elements in sortable lists plugin.
 			</p>
 
+			<p>Now plugin supports also mobile devices. Link jquery-sortable-lists-mobile.js instead of jquery-sortable-lists.js.</p>
+
         	<h2>
 				Look at the example and try it yourself.
 			</h2>
