jquery-sortable-lists.min.js maxLeves feature implementation

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@ $(function()
 				'font-size': '1.1em'
 			}
 		},
-		ignoreClass: 'clickable',
-		maxLevels: 3
+		ignoreClass: 'clickable'
 	};
 
 	var optionsPlus = {
